--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,11 @@
     "@types/jest": "^28.1.6",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7"
+  },
+  "dependencies": {
+    "inversify": "^6.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^4.7.4"
   }
 }
