--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "serverless": "^3.21.0",
     "typescript": "^4.7.4"
   }
 }
