--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "jest": "^28.1.3",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^9.1.4",
     "ts-jest": "^28.0.7"
   },
   "dependencies": {
