--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,17 @@
     "ts-jest": "^28.0.7"
   },
   "dependencies": {
+    "@types/graphql": "^14.5.0",
+    "apollo-server": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "graphql": "^16.5.0",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "serverless": "^3.21.0",
+    "type-graphql": "^1.1.1",
     "typescript": "^4.7.4"
   }
 }
