--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.5.0",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
+    "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "serverless": "^3.21.0",
     "type-graphql": "^1.1.1",
